# notes

./: .gitignore
cogs108/Assignments/: A1_git_python.ipynb  A2_pandas.ipynb
cogs108/Discussions/: D1_python.ipynb  D5_inference.ipynb  D7_text.ipynb
faith/: README.md  index.html
faith/ap24/: 01.html  01.md  03.html  03.md  04.html  04.md  08.html  08.md  09.md  10.html  10.md  11.html  11.md  13.html  14.html  14.md  15.md  16.md  17.html  17.md  18.html  19.html  19.md  20.html  21.md  22.html  22.md  24.md  25.html  25.md  index.html
faith/bible/: index.html
faith/newlife/092624/: Proverbs 26_4-5.md
faith/newlife/111424/: The Promise of The Holy Spirit From the Old to the New Testament.md
faith/newlife/112124/: Mark 1_40-45 KCM 112124.md
faith/redeemer/: 092524.md
grace/ap24/: 02.html  02.md  05.html  05.md  06.html  06.md  07.html  07.md  09.html  12.md  13.md  16.html  18.md  20.md  21.html  23.md  24.html  style.css
grace/bible/: README.md
grace/newlife/092624/: notes.md
grace/newlife/100324/: Review of Romans 1-4.md  notes.md
grace/newlife/101024/: Benefits of Justification.md
grace/newlife/111424/: The Promise of The Holy Spirit From the Old to the New Testament.md
grace/redeemer/: 100624.md
ucsd/cogs108/Assignments/: A3_DataAnalysis.ipynb  A4_NLP.ipynb
ucsd/cogs108/Discussions/: D8_ml.ipynb  (+4 more)
ucsd/cse141/: README.md
ucsd/cse167/hw0/hw0-windows/: CMakeLists.txt
ucsd/cse167/hw0/hw0-windows/src/: HelloGL.cpp  HelloSquare.cpp
ucsd/cse170/: coding4.css  coding4.html  lab2.html  lab5.css  lab5.html
ucsd/ece045/: signals.ipynb
(+381 files in other folders)
